@@ -1,3 +1,8 @@
+vX.Y.Z (YYYY-MM-DD)
+
+- build: add --data flat to specify where datagen will create flat files when
+  not doing a streaming load
+
 v0.61.4 (2024-08-12)
 
 - Fix run script but introduced in v0.61.3
